@@ -8,6 +8,7 @@ Version <unreleased>
 - --restrict-filename-no-spaces avoids spaces in generated filenames
 - --restrict-filename-no-specials generates Windows-compatible filenames (alias for --vfat)
 - --output-na-placeholder: Placeholder value for unavailable fields in filenames
+- --xattrs: Write metadata to the video file's extended attributes
 - Correct series and episode titles in cases where the series title was missing
 
 Version 20220830
